--- a/회의록/03.12(토) 2팀 회의.md
+++ b/회의록/03.12(토) 2팀 회의.md
@@ -10,7 +10,7 @@
 * 취준생(나)을 위한 가벼운 네트워크 강의
 	* 강의 만들면서 나도 공부하고 싶음
 
-은주님
+은하수님
 * 슬라이드 벌써 만들어놓으심!
 * 10분 내외 짧고 굵은 강의 선호
 * 얼굴 굳이 나올 필요 없는 듯
@@ -18,11 +18,11 @@
 	* 차별점 있는 강의를 만들고 싶음
 		* 이 강의를 왜 들어야하는지 컨셉을 확고하게 정하고 싶음
 
-해성님
+목성님
 * 로블록스 강의 확고
 * 아직 슬라이드는 만들지 못했지만 기존 강의들 보면서 생각하신거 공유
 
-수현님
+현수님
 * 기존 따라쓰는 강의들은 노잼 아래 강의 컨셉처럼 만들고 싶음
  [모던 JavaScript 튜토리얼](https://ko.javascript.info/) 
 * 자바스크립트 디자인 패턴 강의 희망
